--- a/login.html
+++ b/login.html
@@ -90,7 +90,11 @@
 		if (userFound == true){
 		    window.location.href = "dashboard.html"
 		}else{
-			alert("User not Found")
+			Swal.fire({
+            icon: 'error',
+            title: 'Oops...',
+            text: 'User not Found',
+          })
 		}
 		}
 
@@ -99,5 +103,6 @@
 			   logIn()
 	  })
   </script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
